fgl/dsl/FGLParser.py
# Generated from fgl/FGL.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FGLParser ( Parser ):

    grammarFileName = "FGL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "','", "'='", "'!='", "'=='", "'('", 
                     "')'", "'*'", "'/'", "'+'", "'-'", "';'", "'{'", "':'", 
                     "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "AS", "LOAD", "SAVE", "INSERT", 
                      "CREATE", "DROP", "REFRESH", "SET", "CONNECT", "DISCONNECT", 
                      "TRAIN", "PREDICT", "REGISTER", "UNREGISTER", "INCLUDE", 
                      "OPTIONS", "WHERE", "PARTITIONBY", "OVERWRITE", "APPEND", 
                      "SHOW", "ERRORIfExists", "IGNORE", "AND", "OR", "NOT", 
                      "REPLACE", "DELETE", "PARADIGM", "JOB", "DATAMODEL", 
                      "PARADIGMS", "JOBS", "DATAMODELS", "BEGIN", "END", 
                      "CALL", "RETURN", "FORMAT", "TYPING", "NUMBER", "BOOLEAN", 
                      "STRING_LITERAL", "NEWLINE", "WS", "COMMENT", "CLINE_COMMENT", 
                      "PLINE_COMMENT", "SLINE_COMMENT", "IDENTIFIER", "IDENTIFIER_TEMPLATE" ]

    RULE_prog = 0
    RULE_sqlStatement = 1
    RULE_dqlStatement = 2
    RULE_ddlStatement = 3
    RULE_dmlStatement = 4
    RULE_load = 5
    RULE_save = 6
    RULE_connect = 7
    RULE_disconnect = 8
    RULE_config = 9
    RULE_create = 10
    RULE_train = 11
    RULE_predict = 12
    RULE_setArguments = 13
    RULE_setArgument = 14
    RULE_conditions = 15
    RULE_macro_key = 16
    RULE_call = 17
    RULE_ret = 18
    RULE_module = 19
    RULE_checkOp = 20
    RULE_conditionOp = 21
    RULE_contextKey = 22
    RULE_createParadigm = 23
    RULE_createDatamodel = 24
    RULE_createJob = 25
    RULE_showAlls = 26
    RULE_showMacro = 27
    RULE_show = 28
    RULE_deleteMacro = 29
    RULE_delete = 30
    RULE_begin_block = 31
    RULE_block_content = 32
    RULE_argument_typing = 33
    RULE_argument = 34
    RULE_expr = 35
    RULE_function = 36
    RULE_ender = 37
    RULE_identifier = 38
    RULE_parameter = 39
    RULE_macro_name = 40
    RULE_json = 41
    RULE_array = 42
    RULE_constant = 43

    ruleNames =  [ "prog", "sqlStatement", "dqlStatement", "ddlStatement", 
                   "dmlStatement", "load", "save", "connect", "disconnect", 
                   "config", "create", "train", "predict", "setArguments", 
                   "setArgument", "conditions", "macro_key", "call", "ret", 
                   "module", "checkOp", "conditionOp", "contextKey", "createParadigm", 
                   "createDatamodel", "createJob", "showAlls", "showMacro", 
                   "show", "deleteMacro", "delete", "begin_block", "block_content", 
                   "argument_typing", "argument", "expr", "function", "ender", 
                   "identifier", "parameter", "macro_name", "json", "array", 
                   "constant" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    AS=18
    LOAD=19
    SAVE=20
    INSERT=21
    CREATE=22
    DROP=23
    REFRESH=24
    SET=25
    CONNECT=26
    DISCONNECT=27
    TRAIN=28
    PREDICT=29
    REGISTER=30
    UNREGISTER=31
    INCLUDE=32
    OPTIONS=33
    WHERE=34
    PARTITIONBY=35
    OVERWRITE=36
    APPEND=37
    SHOW=38
    ERRORIfExists=39
    IGNORE=40
    AND=41
    OR=42
    NOT=43
    REPLACE=44
    DELETE=45
    PARADIGM=46
    JOB=47
    DATAMODEL=48
    PARADIGMS=49
    JOBS=50
    DATAMODELS=51
    BEGIN=52
    END=53
    CALL=54
    RETURN=55
    FORMAT=56
    TYPING=57
    NUMBER=58
    BOOLEAN=59
    STRING_LITERAL=60
    NEWLINE=61
    WS=62
    COMMENT=63
    CLINE_COMMENT=64
    PLINE_COMMENT=65
    SLINE_COMMENT=66
    IDENTIFIER=67
    IDENTIFIER_TEMPLATE=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(FGLParser.EOF, 0)

        def sqlStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FGLParser.SqlStatementContext)
            else:
                return self.getTypedRuleContext(FGLParser.SqlStatementContext,i)


        def ender(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FGLParser.EnderContext)
            else:
                return self.getTypedRuleContext(FGLParser.EnderContext,i)


        def getRuleIndex(self):
            return FGLParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = FGLParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 88
                    self.sqlStatement()
                    self.state = 90 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 89
                        self.ender()
                        self.state = 92 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==12):
                            break
             
                self.state = 98
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 54078655790841856) != 0):
                self.state = 99
                self.sqlStatement()


            self.state = 102
            self.match(FGLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SqlStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ddlStatement(self):
            return self.getTypedRuleContext(FGLParser.DdlStatementContext,0)


        def dmlStatement(self):
            return self.getTypedRuleContext(FGLParser.DmlStatementContext,0)


        def dqlStatement(self):
            return self.getTypedRuleContext(FGLParser.DqlStatementContext,0)


        def getRuleIndex(self):
            return FGLParser.RULE_sqlStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSqlStatement" ):
                listener.enterSqlStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSqlStatement" ):
                listener.exitSqlStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSqlStatement" ):
                return visitor.visitSqlStatement(self)
            else:
                return visitor.visitChildren(self)




    def sqlStatement(self):

        localctx = FGLParser.SqlStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sqlStatement)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.ddlStatement()
                pass
            elif token in [19, 20, 26, 27, 28, 29, 45, 54, 55]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.dmlStatement()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.dqlStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DqlStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def show(self):
            return self.getTypedRuleContext(FGLParser.ShowContext,0)


        def showAlls(self):
            return self.getTypedRuleContext(FGLParser.ShowAllsContext,0)


        def getRuleIndex(self):
            return FGLParser.RULE_dqlStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDqlStatement" ):
                listener.enterDqlStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDqlStatement" ):
                listener.exitDqlStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDqlStatement" ):
                return visitor.visitDqlStatement(self)
            else:
                return visitor.visitChildren(self)




    def dqlStatement(self):

        localctx = FGLParser.DqlStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_dqlStatement)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.show()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.showAlls()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DdlStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def create(self):
            return self.getTypedRuleContext(FGLParser.CreateContext,0)


        def getRuleIndex(self):
            return FGLParser.RULE_ddlStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDdlStatement" ):
                listener.enterDdlStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDdlStatement" ):
                listener.exitDdlStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDdlStatement" ):
                return visitor.visitDdlStatement(self)
            else:
                return visitor.visitChildren(self)




    def ddlStatement(self):

        localctx = FGLParser.DdlStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ddlStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.create()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DmlStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def load(self):
            return self.getTypedRuleContext(FGLParser.LoadContext,0)


        def config(self):
            return self.getTypedRuleContext(FGLParser.ConfigContext,0)


        def save(self):
            return self.getTypedRuleContext(FGLParser.SaveContext,0)


        def train(self):
            return self.getTypedRuleContext(FGLParser.TrainContext,0)


        def predict(self):
            return self.getTypedRuleContext(FGLParser.PredictContext,0)


        def call(self):
            return self.getTypedRuleContext(FGLParser.CallContext,0)


        def ret(self):
            return self.getTypedRuleContext(FGLParser.RetContext,0)


        def delete(self):
            return self.getTypedRuleContext(FGLParser.DeleteContext,0)


        def getRuleIndex(self):
            return FGLParser.RULE_dmlStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDmlStatement" ):
                listener.enterDmlStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDmlStatement" ):
                listener.exitDmlStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDmlStatement" ):
                return visitor.visitDmlStatement(self)
            else:
                return visitor.visitChildren(self)




    def dmlStatement(self):

        localctx = FGLParser.DmlStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dmlStatement)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.load()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.config()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.save()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.train()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 119
                self.predict()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 120
                self.call()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 121
                self.ret()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 122
                self.delete()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOAD(self):
            return self.getToken(FGLParser.LOAD, 0)

        def FORMAT(self):
            return self.getToken(FGLParser.FORMAT, 0)

        def STRING_LITERAL(self):
            return self.getToken(FGLParser.STRING_LITERAL, 0)

        def setArguments(self):
            return self.getTypedRuleContext(FGLParser.SetArgumentsContext,0)


        def AS(self):
            return self.getToken(FGLParser.AS, 0)

        def identifier(self):
            return self.getTypedRuleContext(FGLParser.IdentifierContext,0)


        def getRuleIndex(self):
            return FGLParser.RULE_load

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoad" ):
                listener.enterLoad(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoad" ):
                listener.exitLoad(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoad" ):
                return visitor.visitLoad(self)
            else:
                return visitor.visitChildren(self)




    def load(self):

        localctx = FGLParser.LoadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_load)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(FGLParser.LOAD)
            self.state = 126
            self.match(FGLParser.FORMAT)
            self.state = 127
            self.match(FGLParser.T__0)
            self.state = 128
            self.match(FGLParser.STRING_LITERAL)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 129
                self.setArguments()


            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 132
                self.match(FGLParser.AS)
                self.state = 133
                self.identifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SAVE(self):
            return self.getToken(FGLParser.SAVE, 0)

        def FORMAT(self):
            return self.getToken(FGLParser.FORMAT, 0)

        def STRING_LITERAL(self):
            return self.getToken(FGLParser.STRING_LITERAL, 0)

        def setArguments(self):
            return self.getTypedRuleContext(FGLParser.SetArgumentsContext,0)


        def AS(self):
            return self.getToken(FGLParser.AS, 0)

        def identifier(self):
            return self.getTypedRuleContext(FGLParser.IdentifierContext,0)


        def getRuleIndex(self):
            return FGLParser.RULE_save

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSave" ):
                listener.enterSave(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSave" ):
                listener.exitSave(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSave" ):
                return visitor.visitSave(self)
            else:
                return visitor.visitChildren(self)




    def save(self):

        localctx = FGLParser.SaveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_save)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(FGLParser.SAVE)
            self.state = 137
            self.match(FGLParser.FORMAT)
            self.state = 138
            self.match(FGLParser.T__0)
            self.state = 139
            self.match(FGLParser.STRING_LITERAL)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 140
                self.setArguments()


            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 143
                self.match(FGLParser.AS)
                self.state = 144
                self.identifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConnectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONNECT(self):
            return self.getToken(FGLParser.CONNECT, 0)

        def FORMAT(self):
            return self.getToken(FGLParser.FORMAT, 0)

        def STRING_LITERAL(self):
            return self.getToken(FGLParser.STRING_LITERAL, 0)

        def setArguments(self):
            return self.getTypedRuleContext(FGLParser.SetArgumentsContext,0)


        def AS(self):
            return self.getToken(FGLParser.AS, 0)

        def identifier(self):
            return self.getTypedRuleContext(FGLParser.IdentifierContext,0)


        def getRuleIndex(self):
            return FGLParser.RULE_connect

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConnect" ):
                listener.enterConnect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConnect" ):
                listener.exitConnect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConnect" ):
                return visitor.visitConnect(self)
            else:
                return visitor.visitChildren(self)




    def connect(self):

        localctx = FGLParser.ConnectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_connect)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(FGLParser.CONNECT)
            self.state = 148
            self.match(FGLParser.FORMAT)
            self.state = 149
            self.match(FGLParser.T__0)
            self.state = 150
            self.match(FGLParser.STRING_LITERAL)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 151
                self.setArguments()


            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 154
                self.match(FGLParser.AS)
                self.state = 155
                self.identifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DisconnectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DISCONNECT(self):
            return self.getToken(FGLParser.DISCONNECT, 0)

        def FORMAT(self):
            return self.getToken(FGLParser.FORMAT, 0)

        def STRING_LITERAL(self):
            return self.getToken(FGLParser.STRING_LITERAL, 0)

        def setArguments(self):
            return self.getTypedRuleContext(FGLParser.SetArgumentsContext,0)


        def AS(self):
            return self.getToken(FGLParser.AS, 0)

        def identifier(self):
            return self.getTypedRuleContext(FGLParser.IdentifierContext,0)


        def getRuleIndex(self):
            return FGLParser.RULE_disconnect

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDisconnect" ):
                listener.enterDisconnect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDisconnect" ):
                listener.exitDisconnect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDisconnect" ):
                return visitor.visitDisconnect(self)
            else:
                return visitor.visitChildren(self)




    def disconnect(self):

        localctx = FGLParser.DisconnectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_disconnect)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(FGLParser.DISCONNECT)
            self.state = 159
            self.match(FGLParser.FORMAT)
            self.state = 160
            self.match(FGLParser.T__0)
            self.state = 161
            self.match(FGLParser.STRING_LITERAL)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 162
                self.setArguments()


            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 165
                self.match(FGLParser.AS)
                self.state = 166
                self.identifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def connect(self):
            return self.getTypedRuleContext(FGLParser.ConnectContext,0)


        def disconnect(self):
            return self.getTypedRuleContext(FGLParser.DisconnectContext,0)


        def getRuleIndex(self):
            return FGLParser.RULE_config

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig" ):
                listener.enterConfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig" ):
                listener.exitConfig(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfig" ):
                return visitor.visitConfig(self)
            else:
                return visitor.visitChildren(self)




    def config(self):

        localctx = FGLParser.ConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_config)
        try:
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.connect()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.disconnect()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def createParadigm(self):
            return self.getTypedRuleContext(FGLParser.CreateParadigmContext,0)


        def createDatamodel(self):
            return self.getTypedRuleContext(FGLParser.CreateDatamodelContext,0)


        def createJob(self):
            return self.getTypedRuleContext(FGLParser.CreateJobContext,0)


        def getRuleIndex(self):
            return FGLParser.RULE_create

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate" ):
                listener.enterCreate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate" ):
                listener.exitCreate(self)
